--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-09-17 15:40:17 +0100 
+%% Created for Elizabeth Moorcroft at 2014-09-23 16:23:55 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -32,8 +32,9 @@
 	Author = {Jones, Kate E. and Russ, Jon A. and Bashta, Andriy-Taras and Bilhari, Zolt{\'a}lan and Catto, Colin and Cs{\H o}sz, Istv{\'a}n and Gorbachev, Alexander and Gy{\H o}rfi, P{\'a}leter and Hughes, Alice and Ivashkiv, Igor and Koryagina, Natalia and Kurali, Anik{\'a}lo and Langton, Steve and Collen, Alanna and Margiean, Georgiana and Pandourski, Ivan and Parsons, Stuart and Prokofev, Igor and Szodoray-Paradi, Abigel and Szodoray-Paradi, Farkas and Tilova, Elena and Walters, Charlotte L. and Weatherill, Aidan and Zavarzin, Oleg},
 	Booktitle = {Biodiversity Monitoring and Conservation},
 	Date-Added = {2014-09-17 14:05:21 +0000},
-	Date-Modified = {2014-09-17 14:05:21 +0000},
+	Date-Modified = {2014-09-23 15:23:55 +0000},
 	Doi = {10.1002/9781118490747.ch10},
+	Editor = {Collen, B and Pettorelli, N and Baillie, J. E. M. and Durant, S. M. },
 	Isbn = {9781118490747},
 	Keywords = {global acoustic monitoring; indicator bats program (iBats); ultrasonic biodiversity; ultrasonic indicator},
 	Pages = {211--247},
