--- a/gREM_ms_fv.tex
+++ b/gREM_ms_fv.tex
@@ -115,7 +115,7 @@ Existing methods for estimating animal density often require additional informat
 
 Whilst these restrictions are not problematic for most camera trap makes (e.g., Reconyx, Cuddeback), the REM cannot be used to estimate densities from camera traps with a wider sensor width (e.g. canopy monitoring with fish eye lenses, \citet{brusa2014increasing}). Additionally, the REM method is not useful in estimating densities from acoustic survey data as acoustic detector angles are often wider than $\pi/2$ radians.  Acoustic detectors are designed for a range of diverse tasks and environments \citep{kessel2014review}, which naturally leads to a wide range of sensor detection widths and detection distances. In addition to this, calls emitted by many animals are directional \citep{blumstein2011acoustic}, breaking the assumption of the REM method. 
 
-There has been a sharp rise in interest around passive acoustic detectors in recent years, with a 10 fold increase in publications in the decade between 2000 and 2010 \citep{kessel2014review}. Acoustic monitoring is being developed to study many aspects of ecology, including the interactions of animals and their environments \citep{blumstein2011acoustic, rogers2013density}, the presence and relative abundances of species \citep{marcoux2011local}, biodiversity of an area \citep{depraetere2012monitoring}, and monitoring population trends \citep{waltersetalreview}. 
+There has been a sharp rise in interest around passive acoustic detectors in recent years, with a 10 fold increase in publications in the decade between 2000 and 2010 \citep{kessel2014review}. Acoustic monitoring is being developed to study many aspects of ecology, including the interactions of animals and their environments \citep{blumstein2011acoustic, rogers2013density}, the presence and relative abundances of species \citep{marcoux2011local}, biodiversity of an area \citep{depraetere2012monitoring}, and monitoring population trends% \citep{waltersetalreview}. 
 
 Acoustic data suffers from many of the problems associated with data from camera trap surveys in that individuals are often unmarked, so capture-mark-recapture methods cannot be used to estimate densities. In some cases the distance between the animal and the sensor is known, for example when an array of sensors is deployed and the position of the animal is estimated by triangulation \citep{lewis2007sperm}. In these situations distance-sampling methods can be applied, a method typically used for marine mammals \citep{rogers2013density}. However, in many cases distance estimation is not possible, for example when single sensors are deployed, a situation typical in the majority of terrestrial acoustic surveys  \citep{elphick2008you, buckland2008estimating}. In these cases, only relative measures of local abundance can be calculated, and not absolute densities. This means that comparison of populations between species and sites is problematic without assuming equal detectability \citep{hayes2000assumptions, schmidt2003count, walters2013challenges}. Equal detectability is unlikely because of differences in environmental conditions, sensor type, habitat, and species biology. 
 
