--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,37 +2,29 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-09-23 16:23:55 +0100 
+%% Created for Elizabeth Moorcroft at 2014-09-23 16:44:38 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@inbook{walters2013challenges,
-	Author = {Adams, Rick A. and Pedersen, Scott C. and Walters, CharlotteL. and Collen, Alanna and Lucas, Tim and Mroz, Kim and Sayer, CatherineA. and Jones, KateE.},
+@incollection{walters2013challenges,
+	Author = {Walters, Charlotte L and Collen, Alanna and Lucas, Tim and Mroz, Kim and Sayer, Catherine A and Jones, Kate E},
 	Booktitle = {Bat Evolution, Ecology, and Conservation},
-	Da = {2013/01/01},
-	Date-Added = {2014-09-17 14:09:12 +0000},
-	Date-Modified = {2014-09-17 14:09:12 +0000},
-	Doi = {10.1007/978-1-4614-7397-8{\_}23},
-	Isbn = {978-1-4614-7396-1},
-	La = {English},
-	Pages = {479-499},
-	Publisher = {Springer New York},
-	Se = {23},
+	Date-Added = {2014-09-23 15:40:10 +0000},
+	Date-Modified = {2014-09-23 15:44:12 +0000},
+	Editor = {Adams, Rick A. and Pedersen, Scott C.},
+	Pages = {479--499},
+	Publisher = {Springer},
 	Title = {Challenges of Using Bioacoustics to Globally Monitor Bats},
-	Ty = {CHAP},
-	Url = {http://dx.doi.org/10.1007/978-1-4614-7397-8_23},
-	Year = {2013},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1007/978-1-4614-7397-8_23},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-1-4614-7397-8%7B%5C_%7D23}}
+	Year = {2013}}
 
-@inbook{jones2011indicator,
+@inproceedings{jones2011indicator,
 	Author = {Jones, Kate E. and Russ, Jon A. and Bashta, Andriy-Taras and Bilhari, Zolt{\'a}lan and Catto, Colin and Cs{\H o}sz, Istv{\'a}n and Gorbachev, Alexander and Gy{\H o}rfi, P{\'a}leter and Hughes, Alice and Ivashkiv, Igor and Koryagina, Natalia and Kurali, Anik{\'a}lo and Langton, Steve and Collen, Alanna and Margiean, Georgiana and Pandourski, Ivan and Parsons, Stuart and Prokofev, Igor and Szodoray-Paradi, Abigel and Szodoray-Paradi, Farkas and Tilova, Elena and Walters, Charlotte L. and Weatherill, Aidan and Zavarzin, Oleg},
 	Booktitle = {Biodiversity Monitoring and Conservation},
 	Date-Added = {2014-09-17 14:05:21 +0000},
-	Date-Modified = {2014-09-23 15:23:55 +0000},
+	Date-Modified = {2014-09-23 15:33:31 +0000},
 	Doi = {10.1002/9781118490747.ch10},
 	Editor = {Collen, B and Pettorelli, N and Baillie, J. E. M. and Durant, S. M. },
 	Isbn = {9781118490747},
