--- a/gREM_ms_fv.tex
+++ b/gREM_ms_fv.tex
@@ -300,7 +300,7 @@ The gREM can estimate densities of a number of taxa where no, or few, accurate m
 
 
 %%%% ------- Acknowledgments ---------%%%%
-\section{Acknowledgments}
+\section*{Acknowledgments}
 We thank Hilde Wilkinson-Herbot, Chris Carbone, Francois Balloux, Andrew Cunningham, and Steve Hailes for comments on previous versions of the manuscript. This study was funded through CoMPLEX PhD studentships at University College London supported by BBSRC and EPSRC (EAM and TCDL); The Darwin Initiative (Awards 15003, 161333, EIDPR075 to KEJ), and The Leverhulme Trust (Philip Leverhulme Prize for KEJ).
 
 \bibliographystyle{mee.bst}	
