Ref 2 comment 1. Clarified that it is expected that higher captures => higher precision and that high widths => precision BECAUSE it increases captures.

--- a/gREM_ms_revisions.tex
+++ b/gREM_ms_revisions.tex
@@ -221,7 +221,7 @@ The equation for $\bar{p}$ has been newly derived for each submodel in the gREM,
 \subsection*{Simulation model}
 
 \subsubsection*{gREM submodels}
-All gREM submodels showed a high accuracy, i.e., the mean difference between the estimated and actual values was not significantly different from zero across all models, at p \textless 0.05, corrected for multiple tests (all gREM sub models Wilcoxon signed-rank test) (Figure~\ref{f:ModelBias}). However, the precision of the submodels do vary, where the gas model is the most precise and the SW7 sub model the least precise, having the smallest and the largest interquartile range, respectively (Figure~\ref{f:ModelBias}). The standard deviation of the error between the estimated and true densities is strongly related to both the sensor and signal widths (Appendix S5), such that larger widths have lower standard deviations (greater precision).
+All gREM submodels showed a high accuracy, i.e., the mean difference between the estimated and actual values was not significantly different from zero across all models, at p \textless 0.05, corrected for multiple tests (all gREM sub models Wilcoxon signed-rank test) (Figure~\ref{f:ModelBias}). However, the precision of the submodels do vary, where the gas model is the most precise and the SW7 sub model the least precise, having the smallest and the largest interquartile range, respectively (Figure~\ref{f:ModelBias}). The standard deviation of the error between the estimated and true densities is strongly related to both the sensor and signal widths (Appendix S5), such that larger widths have lower standard deviations (greater precision) due to the increased capture rate of these models.
 
 \begin{figure}[t]
 	\centering
@@ -233,7 +233,7 @@ All gREM submodels showed a high accuracy, i.e., the mean difference between the
 
 \subsubsection*{Number of captures}
 
-Within the four gREM submodels tested (NW1, SW1, SE3, NE1), the  accuracy was not affected by the number of captures. The mean difference between the estimated and actual values was not significantly different from zero across all capture rates, at p \textless 0.05, corrected for multiple tests (Wilcoxon signed-rank test) (Figure~\ref{f:Captures}). However, the precision was dependent on the number of captures across all four of the gREM submodels, where precision increases as number of captures increases (Figure~\ref{f:Captures}). For all gREM submodels, the the coefficient of variation falls to 10\% at 100 captures. 
+Within the four gREM submodels tested (NW1, SW1, SE3, NE1), the  accuracy was not affected by the number of captures. The mean difference between the estimated and actual values was not significantly different from zero across all capture rates, at p \textless 0.05, corrected for multiple tests (Wilcoxon signed-rank test) (Figure~\ref{f:Captures}). However, the precision was dependent on the number of captures across all four of the gREM submodels, where precision increases as number of captures increases, as would be expected for any statistical estimate (Figure~\ref{f:Captures}). For all gREM submodels, the the coefficient of variation falls to 10\% at 100 captures. 
 
 \begin{figure}[t]
        \centering
@@ -273,7 +273,7 @@ Within the four gREM submodels tested (NW1, SW1, SE3, NE1), neither the accuracy
 %%%% ------- Discussion ---------%%%%
 \section*{Discussion}
 
-We have developed the gREM such that it can be used to estimate density from acoustic sensors and camera traps. This has entailed a generalisation of the gas model and the REM in \citet{rowcliffe2008estimating} to be applicable to any combination of sensor width and signal directionality. We have used simulations to show, as a proof of principle, that these models are accurate and precise. The precision of the gREM was found to be dependent on the width of the sensor and the signal, and the number of captures.
+We have developed the gREM such that it can be used to estimate density from acoustic sensors and camera traps. This has entailed a generalisation of the gas model and the REM in \citet{rowcliffe2008estimating} to be applicable to any combination of sensor width and signal directionality. We have used simulations to show, as a proof of principle, that these models are accurate and precise. The precision of the gREM was found to be dependent on the number of captures which in turn depends on the width of the sensor and the signal.
 
 \subsection*{Analytical model}
 The gREM was derived for different combinations of $\alpha$ and $\theta$ resulting in 25 different submodels, the expression for $\bar{p}$ are equal for many of these submodels resulting in eight different equations including the previously derived gas model and REM. These submodels were tested for consistency with adjacent expressions being equal at their boundaries. These new submodels will allow researchers to evaluate the absolute density of animals that have previously been difficult to study, such as echolocating bats \citep{clement2013estimating}, with non-invasive methods such as remote sensors. The gREM also allows the data from acoustic detectors to be used where an animal has a directional calls, this could be used for a range of animals including songbirds \citep{blumstein2011acoustic}, dolphins \citep{lammers2003directionality}, as well as echolocating bats \citep{walters2013challenges}. 
